[project]
name = "pylon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodns>=3.5.0",
    "aiohttp[speedups]>=3.12.15",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
]
